# run-command-on-aws-lambda

./: .cirrus.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
demo/: .terraform.lock.hcl  Dockerfile  README.md  image.tf  lambda.tf  terraform.tf
src/: main.rs
